# mymesh

./: .gitignore  README.md  pyproject.toml  setup.py
mymesh/: __init__.py  meshes.py
tests/: test.py
